<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarStyle"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/city_name"
        android:layout_width="309dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="199dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:alpha="0.4"
        android:background="@drawable/layout_bg"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name" />

    <ImageView
        android:id="@+id/temparature_image"
        android:layout_width="96dp"
        android:layout_height="90dp"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/temparature_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature_value"
        android:layout_width="195dp"
        android:layout_height="135dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" />

    <TextView
        android:id="@+id/temperature_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temparature_image">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:background="@drawable/layout_bg" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            android:text="@string/wind"
            android:textColor="@color/white"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="51dp"
            tools:layout_editor_absoluteY="411dp" />

        <TextView
            android:id="@+id/wind_speed_value"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="146dp"
            android:layout_toEndOf="@+id/wind"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/wind_direction_value"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="22dp"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="84dp"
            android:text="@string/pressure"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="84dp"
            android:layout_toEndOf="@+id/pressure"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="18dp"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/humidity_value"
            android:layout_width="98dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="121dp"
            android:layout_marginBottom="18dp"
            android:layout_toEndOf="@+id/humidity"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forecast_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/base"
        android:text="@string/weather_forecast"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_layout"
        app:layout_constraintVertical_bias="0.382" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:text="@string/powered_by"
        android:textColor="@color/base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecast_button" />

</androidx.constraintlayout.widget.ConstraintLayout>